Fix icon alignment

--- a/styles/sheet.css
+++ b/styles/sheet.css
@@ -543,6 +543,9 @@ input.background {
 .grid-space .cover {
     height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .grid-space .cover.highlight-cover {
     background-color:#ffffff44;
